--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -8,7 +8,7 @@
   
   <ion-button expand="block"  id="lut" (click)="novaLuta()">
     <img src="https://img.icons8.com/metro/26/000000/royal-marines.png">
-    Novo Combate
+    Novo Jogo
   </ion-button>
   <ion-button expand="block" (click)="historico()"  >
     <img src="https://img.icons8.com/metro/26/000000/rules.png">
