--- a/src/app/pages/user/user.page.html
+++ b/src/app/pages/user/user.page.html
@@ -12,9 +12,8 @@
   </ion-button>
   <ion-button expand="block" (click)="historico()"  >
     <img src="https://img.icons8.com/metro/26/000000/rules.png">
-    Minhas Lutas
+    Meus Jogos
   </ion-button> 
-  
   
 </ion-content>
 
