--- a/src/app/pages/registra-lutadores/registra-lutadores.page.html
+++ b/src/app/pages/registra-lutadores/registra-lutadores.page.html
@@ -8,7 +8,7 @@
  
 <ion-content>
         <ion-list (click)="presentModal2()">
-          <ion-list-header> Lutador 2</ion-list-header>
+          <ion-list-header> Oponente </ion-list-header>
           <ion-item>
               <ion-avatar slot="start">
                   <img id="fotoButton2" src="" alt="">
