modelo para aplicativo em primeira pessoa

--- a/src/app/pages/minhas-lutas/minhas-lutas.page.scss
+++ b/src/app/pages/minhas-lutas/minhas-lutas.page.scss
@@ -9,3 +9,21 @@
     margin-left: auto;
 
 }
+.hora{
+    position: absolute;
+    right: 0%;
+}
+
+.tipoJogo{
+    position: absolute;
+    // margin-right: auto; 
+    // margin-left: auto;
+    font-size: 100%;
+}
+
+.Filtro{
+    position: absolute;
+    // margin-right: auto; 
+    // margin-left: auto;
+    right: 0%;
+}
