--- a/src/app/pages/registro-op/registro-op.page.html
+++ b/src/app/pages/registro-op/registro-op.page.html
@@ -11,7 +11,7 @@
           <ion-button class="movimento" id="alt1" (click)="marcaAlt(1)">Maior</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button class="movimento" id="alt2" (click)="marcaAlt(2)">Parecida</ion-button>
+          <ion-button class="movimento" id="alt2" (click)="marcaAlt(2)"> Altura <br> parecida</ion-button>
         </ion-col>
         <ion-col>
           <ion-button class="movimento" id="alt3" (click)="marcaAlt(3)">Menor</ion-button>
