--- a/src/app/pages/minhas-lutas/minhas-lutas.page.html
+++ b/src/app/pages/minhas-lutas/minhas-lutas.page.html
@@ -3,30 +3,44 @@
       <ion-button shape="round" (click)="voltar()">
         <ion-icon name="arrow-dropleft-circle"></ion-icon>
       </ion-button>
+      <ion-button shape="round" class="Filtro">
+        <ion-icon name="options-sharp"></ion-icon>
+      </ion-button>
     </ion-toolbar>
   </ion-header>  
 
 <ion-content padding>  
   <div id="lutas">   
     
-    <div class="luta" *ngFor="let op of userProfile?.lutadores; let i = index">
+    <div class="luta" *ngFor="let lutadores of lutas">
       
-      <ion-card (click)="selecionaLuta(i)">
+      <ion-card (click)="selecionaLuta(lutadores.idLuta)">
         <ion-card-header  >
-          <ion-card-subtitle>{{op.clube1}}  X  {{op.clube2}}</ion-card-subtitle>
-          <ion-card-title>{{op.nome1}} X {{op.nome2}}</ion-card-title>
+          <ion-card-subtitle>
+            <ion-toolbar >
+              {{lutadores.tipoJogo}}
+            </ion-toolbar>
+            <ion-toolbar>
+              <ion-label>
+                {{lutadores.data}}
+              </ion-label>
+              <ion-label class="hora">
+                {{lutadores.hora}}
+              </ion-label>
+            </ion-toolbar>            
+            {{lutadores.clube1}}  X  {{lutadores.clube2}}
+            </ion-card-subtitle>
+          <ion-card-title>{{lutadores.nome1}} X {{lutadores.nome2}}</ion-card-title>
         </ion-card-header>
           <ion-list>
             <ion-item>
-              <ion-label>Punhos:{{op.punho1}}  X  {{op.punho2}}</ion-label>
+              <ion-label>Punhos:{{lutadores.punho1}}  X  {{lutadores.punho2}}</ion-label>
             </ion-item>
             <ion-item>
-              <ion-label>Altura:{{op.altura_relativa}}</ion-label>
+              <ion-label>Altura:{{lutadores.altura_relativa}}</ion-label>
             </ion-item>
           </ion-list>
-      </ion-card>
-    
-      
+      </ion-card> 
     </div>
   </div>
 
