--- a/src/app/pages/registro-op/registro-op.page.html
+++ b/src/app/pages/registro-op/registro-op.page.html
@@ -25,10 +25,10 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <ion-button class="movimento" id="punhLut21" (click)="marcaPunhLut2(1)">Destro</ion-button>
+          <ion-button class="movimento" id="punhLut21" (click)="marcaPunhoOponente(1)">Destro</ion-button>
         </ion-col>
         <ion-col>
-          <ion-button class="movimento" id="punhLut22" (click)="marcaPunhLut2(2)">Canhoto</ion-button>
+          <ion-button class="movimento" id="punhLut22" (click)="marcaPunhoOponente(2)">Canhoto</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
